--- a/css/mystyle_json.css
+++ b/css/mystyle_json.css
@@ -72,6 +72,7 @@
             gap: 15px;
             flex-wrap: wrap;
             margin-bottom: 30px;
+            justify-content: center; /* ปุ่มทั้งหมดอยู่ตรงกลาง */
         }
 
         .home-button-center {
@@ -289,6 +290,9 @@
             
             .button-group {
                 flex-direction: column;
+                text-decoration: none; /* สำหรับ link */
+                display: inline-block; /* สำหรับ link */
+                text-align: center; /* สำหรับ link */; 
             }
             
             button {
